; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_mruby.c_send_error_callback.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_mruby.c_send_error_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_error_callback(%struct.TYPE_9__* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_8__*, align 8
  %12 = alloca i32*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  store %struct.TYPE_8__* %17, %struct.TYPE_8__** %11, align 8
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @mrb_ary_entry(i32 %18, i32 0)
  %20 = call i32 @mrb_obj_ptr(i32 %19)
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @mrb_ary_entry(i32 %24, i32 1)
  %26 = call i32* @h2o_mruby_get_generator(%struct.TYPE_8__* %23, i32 %25)
  store i32* %26, i32** %12, align 8
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %28 = load i32*, i32** %12, align 8
  %29 = call i32 @handle_exception(%struct.TYPE_9__* %27, i32* %28)
  %30 = call i32 (...) @mrb_nil_value()
  ret i32 %30
}

declare dso_local i32 @mrb_obj_ptr(i32) #1

declare dso_local i32 @mrb_ary_entry(i32, i32) #1

declare dso_local i32* @h2o_mruby_get_generator(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @handle_exception(%struct.TYPE_9__*, i32*) #1

declare dso_local i32 @mrb_nil_value(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
